--- a/myoracle1/Vagrantfile
+++ b/myoracle1/Vagrantfile
@@ -7,6 +7,7 @@
 Vagrant.configure("2") do |config|
   # myoracle1 vm
   config.vm.box = "bento/centos-7.8"
+  config.vm.box_url = "https://app.vagrantup.com/bento/boxes/centos-7.8"
   config.vm.hostname = 'myoracle1'
   config.vm.network :private_network,ip: "192.168.60.50"
   config.vm.provider "virtualbox" do |vbox|
